# rccusage

./: CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  MIGRATION.md  Makefile  README.md  build.sh
.github/: dependabot.yml
.github/workflows/: build.yml  ci.yml  publish.yml
scripts/: release.sh
src/: aggregation.rs  config.rs  data_loader.rs  jq.rs  live.rs  logger.rs  main.rs  pricing.rs  utils.rs
src/commands/: blocks.rs  daily.rs  mod.rs  monthly.rs  session.rs  statusline.rs  weekly.rs
src/output/: mod.rs  table.rs
src/types/: mod.rs  session.rs  tokens.rs  usage.rs
