[package]
name = "ccusage"
version = "0.1.0"
edition = "2021"
authors = ["ccusage contributors"]
description = "Fast usage analysis tool for Claude Code"
license = "MIT"
repository = "https://github.com/ryoppippi/ccusage"
keywords = ["claude", "cli", "usage", "analytics"]
categories = ["command-line-utilities"]

[dependencies]
# Core dependencies
anyhow = "1.0"
thiserror = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = "0.10"

# CLI and formatting
clap = { version = "4.5", features = ["derive", "env", "string"] }
comfy-table = "7.1"
colored = "2.1"
indicatif = "0.17"

# File and path handling
glob = "0.3"
dirs = "5.0"
walkdir = "2.5"

# Async runtime
tokio = { version = "1.42", features = ["full"] }
futures = "0.3"

# Utilities
regex = "1.11"
lazy_static = "1.5"
indexmap = { version = "2.7", features = ["serde"] }
itertools = "0.13"
rust_decimal = "1.36"
rust_decimal_macros = "1.36"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
log = "0.4"
env_logger = "0.11"

# HTTP client for pricing data
reqwest = { version = "0.12", features = ["json"], optional = true }

# File watching for live monitoring
notify = "6.1"

# Process execution for jq filtering
subprocess = "0.2"

# Terminal utilities
terminal_size = "0.4"
unicode-width = "0.1"

# Performance
rayon = "1.10"
dashmap = "6.1"
ahash = "0.8"

[features]
default = ["online-pricing"]
online-pricing = ["reqwest"]

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[[bin]]
name = "ccusage"
path = "src/main.rs"