[package]
name = "rccusage"
version = "0.1.0"
edition = "2021"
authors = ["rccusage contributors"]
description = "Fast Rust implementation of ccusage - Claude Code usage analyzer"
license = "MIT"
repository = "https://github.com/simonsickle/rccusage"
homepage = "https://github.com/simonsickle/rccusage"
documentation = "https://docs.rs/rccusage"
readme = "README.md"
keywords = ["claude", "cli", "usage", "analytics", "anthropic"]
categories = ["command-line-utilities", "development-tools"]
exclude = [
    ".github/*",
    ".gitignore",
    "scripts/*",
    "test-data/*",
]

[dependencies]
# Core dependencies
anyhow = "1.0"
thiserror = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = "0.10"

# CLI and formatting
clap = { version = "4.5", features = ["derive", "env", "string"] }
comfy-table = "7.1"
colored = "3.0"
indicatif = "0.18"

# File and path handling
glob = "0.3"
dirs = "6.0"
walkdir = "2.5"

# Async runtime
tokio = { version = "1.42", features = ["full"] }
futures = "0.3"

# Utilities
regex = "1.11"
lazy_static = "1.5"
indexmap = { version = "2.7", features = ["serde"] }
itertools = "0.14"
rust_decimal = "1.36"
rust_decimal_macros = "1.36"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
log = "0.4"
env_logger = "0.11"

# HTTP client for pricing data
reqwest = { version = "0.12", features = ["json"], optional = true }

# File watching for live monitoring
notify = "8.2"

# Process execution for jq filtering
subprocess = "0.2"

# Terminal utilities
terminal_size = "0.4"
unicode-width = "0.2"

# Performance
rayon = "1.10"
dashmap = "6.1"
ahash = "0.8"

[features]
default = ["online-pricing"]
online-pricing = ["reqwest"]

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[[bin]]
name = "rccusage"
path = "src/main.rs"